--- a/frontend/src/Components/Home/Home.css
+++ b/frontend/src/Components/Home/Home.css
@@ -9,6 +9,22 @@
     font-family: 'Rubik';
     letter-spacing: 0.5mm;
     font-size: 3rem;
+    transform: translateX(0px);
+    animation: slidein 1750ms cubic-bezier(0.41, -0.11, 0.3, 0.86); 
+}
+
+@keyframes slidein {
+    0%{
+      
+        transform: translateX(-630px);
+
+    }
+    100%{
+        transform: translateX(0px);
+
+    
+    }
+    
 }
 .main-textdesc{
     font-family: 'Rubik';
