--- a/frontend/src/Components/User/Signup.css
+++ b/frontend/src/Components/User/Signup.css
@@ -41,6 +41,12 @@
     .img-res{
     
         height: 50vh;
+        
+    }
+
+    .signup-form{
+
+        margin-left: 0 !important;
     }
     
 }
