--- a/frontend/src/Components/Admin/AdminSideBar.module.css
+++ b/frontend/src/Components/Admin/AdminSideBar.module.css
@@ -1,6 +1,6 @@
 
   @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap');
-
+  @import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@500&family=Montserrat:wght@600&display=swap');
 
 
 
@@ -70,7 +70,7 @@ a{
     
 }
 
-.hover_style:hover{
+.hover_style:hover,  .active{
 
     background-color: rgba(202, 134, 33, 0.223);
 }
@@ -78,5 +78,27 @@ a{
 .hello{
 
     background-color: rgba(202, 134, 33, 0.223);
+}
+
+.mob_link_font{
+
+    font-family: "Gabarito";
+    color: grey
+}
+
+.mob_nav_height_exp{
+
+    height: 200px;
+    transition: all cubic-bezier(0.4, 0, 0.2, 1) 350ms;
+    overflow: hidden;
+
+}
+
+.mob_nav_height_notexp{
+
+    height: 0;
+    overflow: hidden;
+    transition: all cubic-bezier(0.4, 0, 0.2, 1) 350ms;
+
 }
 
