--- a/frontend/src/Components/Admin/ViewUsers.css
+++ b/frontend/src/Components/Admin/ViewUsers.css
@@ -61,3 +61,12 @@ td {
 
    background-color: none;
 }
+
+
+@media screen and (max-Width:720px) {
+  .main-margin{
+
+    margin-left: 0;
+    padding: 15;
+  }
+}
